加了一点左侧导航列表

--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,13 @@
       </div>
     </div>
     <div class="content">
-      <div class="nav-list"></div>
+      <div class="nav-list">
+        <ul>
+          <li><span class="write-letter"></span><a href="#">写信</a></li>
+          <li><span class="receive-letter"></span><a href="#">收信</a></li>
+          <li><span class="contact"></span><a hef="#">通讯录</a></li>
+        </ul>
+      </div>
       <div class="work-area"></div>
     </div>
   </body>
