1）完成左侧导航，2）完成右侧附属信息和中间区块的整体框架

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,13 +31,54 @@
     </div>
     <div class="content">
       <div class="nav-list">
-        <ul>
+        <ul id="main-option">
           <li><span class="write-letter"></span><a href="#">写信</a></li>
           <li><span class="receive-letter"></span><a href="#">收信</a></li>
           <li><span class="contact"></span><a hef="#">通讯录</a></li>
         </ul>
+        <div class="split"></div>
+        <ul id="middle-area">
+          <li><a href="#">收件箱</a></li>
+          <li><a herf="#">星标邮件</a><span class="star"></span></li>
+          <li><a href="#" class="not-read">群邮件(11)</a></li>
+          <li><a href="#">草稿箱</a></li>
+          <li><a href="#">已发送</a></li>
+          <li><a href="#">已删除</a></li>
+          <li><a href="#" class="not-read">垃圾箱(2)</a></li>
+          <li><a href="#" class="not-read">QQ邮件订阅(3)</a></li>
+        </ul>
+        <div class="split"></div>
+        <ul id="bottom-area">
+          <li><a href="#">漂流瓶</a><span class="drift-bottle"></span></li>
+          <li><a href="#">贺卡</a><span>&nbsp;|&nbsp;</span><a href="#">明信片</a></li>
+          <li><a href="#" class="not-read">阅读空间(3+1)</a></li>
+        </ul>
       </div>
-      <div class="work-area"></div>
+      <div class="work-area">
+        <div class="ex-bar">
+          <div class="city-name">深圳</div>
+          <div class="whether-detail">今：12°C~19°C&nbsp;明：14°C~19°C</div>
+          <div class="resume">
+            <div class="resume-header">简历中心</div>
+            <div class="resume-detail">智能导入简历，提供个性模板，为你的求职保驾护航。<a href="#">立即体验</a></div>
+          </div>
+          <div class="tip-area">
+            <ul class="tab">
+              <li class="tab-header-active">生日提醒</li>
+              <li class="tab-header">我的信息</li>
+            </ul>
+            <div class="tab-content-active">
+              <div class="friend-info">
+                <div class="avatar-1"></div>
+                <div class="friend-name">  Kitty爱吃鱼</div>
+                <div class="friend-tip">在今天(1月13日)过生日</div>
+                <div class="action"><a href="#">发贺卡</a><a href="#">发明信片            </a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="main-center">1</div>
+      </div>
     </div>
   </body>
 </html>
