完善右侧框和顶部的查找区域

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,12 +19,12 @@
       <div class="header-search">
         <div class="header-option">
           <ul>
-            <li><a href="#">反馈建议</a></li>
-            <li><a href="#">帮助中心</a></li>
+            <li><a href="#">反馈建议</a><span>&nbsp;|</span></li>
+            <li><a href="#">帮助中心</a><span>&nbsp;|</span></li>
             <li><a href="#">退出</a></li>
           </ul>
         </div>
-        <div class="input-txt">
+        <div class="input-txt"><span class="search"></span><span class="drop-down"></span>
           <input type="text" placeholder="邮件全文搜索" id="search-txt">
         </div>
       </div>
@@ -56,24 +56,30 @@
       </div>
       <div class="work-area">
         <div class="ex-bar">
-          <div class="city-name">深圳</div>
-          <div class="whether-detail">今：12°C~19°C&nbsp;明：14°C~19°C</div>
+          <div class="city-name">深圳</div><span class="whether-detail">今：</span><span class="sunny"></span><span>12°C~19°C&nbsp;&nbsp;明：</span><span class="rainy"></span><span>14°C~19°C</span>
           <div class="resume">
             <div class="resume-header">简历中心</div>
             <div class="resume-detail">智能导入简历，提供个性模板，为你的求职保驾护航。<a href="#">立即体验</a></div>
           </div>
           <div class="tip-area">
             <ul class="tab">
-              <li class="tab-header-active">生日提醒</li>
+              <li class="tab-header first active">生日提醒</li>
               <li class="tab-header">我的信息</li>
             </ul>
-            <div class="tab-content-active">
+            <div class="tab-content active">
               <div class="friend-info">
-                <div class="avatar-1"></div>
+                <div class="avatar avatar-1"></div>
                 <div class="friend-name">  Kitty爱吃鱼</div>
                 <div class="friend-tip">在今天(1月13日)过生日</div>
-                <div class="action"><a href="#">发贺卡</a><a href="#">发明信片            </a></div>
+                <div class="action"><a href="#">发贺卡</a><a href="#">发明信片</a></div>
               </div>
+              <div class="friend-info">
+                <div class="avatar avatar-2"></div>
+                <div class="friend-name">  仰天笑</div>
+                <div class="friend-tip">在后天(1月14日)过生日</div>
+                <div class="action"><a href="#">发贺卡</a><a href="#">发明信片</a></div>
+              </div>
+              <div class="split"><a href="#" class="mid-anchor">查看所有好友生日>></a></div>
             </div>
           </div>
         </div>
